[metadata]
name = cms-forms
version = 0.1.2
description = CMS plugin for creating and managing forms
long_description = file: README.rst
url = https://www.rivivo.xyz/projects/cms
author = Ashwin Shenoy
author_email = aswinshenoy65@gmail.com
maintainer = Ashwin Shenoy
maintainer_email = aswinshenoy65@gmail.com
license = GNU-GPL-V3
install_requires =
    Django==2.2.6
    graphene-django==2.6.0
    graphql-core==2.1
    django-graphql-jwt==0.2.2
    django-import-export==1.2.0
    django-easy-select2==1.5.6
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
zip_safe = False
